js/js.translator/testData/incremental/invalidation/exportsThroughInlineFunctionWithCrossModuleInliner/lib1/l1.0.kt
fun foo() = "hello"

inline fun fooInline() = "hello inline 0"
